# Computer_Graphics

./: CMakeLists.txt  README.md  convolution_filters.cpp  convolution_filters.h  dithering.cpp  dithering.h  function_filters.cpp  function_filters.h  histogram.cpp  histogram.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  octree.cpp  octree.h
filters/: edge_detection_3x3.txt  emboss_3x3.txt  gaussian_blur_3x3.txt  mean_blur_3x3.txt  sharpen_3x3.txt
